2003-08-21  Scott Goodwin  <scott@scottg.net>

        * all: Added Ns_OpenSSLContextInit, Ns_OpenSSLContextRelease and other
          C API functions. Refactored rest of C API and other functions.

2003-08-12  Scott Goodwin  <scott@scottg.net>

        * nsopenssl.c: fixed bug when setting protocols; SSL handshake now
        completes successfully.

2003-08-10  Scott Goodwin  <scott@scottg.net>

        * ssl.c: Got rid of SetNonBlocking(); calling Ns_SockSetNonBlocking
        and Ns_SockSetBlocking directly.

2003-08-08  Scott Goodwin  <scott@scottg.net>

        * All:
        - Ripped out AOLserver 3.x comm driver stuff
        - Added Tcl hash to manage nsopenssl state for each virtual server
        - OpenSSL library is initialized at first virtual server init
        - New Ns_DriverInitData structure added (req'd AOLserver mod)
        - Replaced config.c/h by using AOLserver C API config stuff directly

2003-01-08  Scott Goodwin  <scott@scottg.net>

	* All: Committing back to AOLserver SourceForge area prior to ripping
	out AOLserver 3.x support. nsopenssl 3.x will only be supporting
	AOLserver 4.x.

2002-12-22  Scott Goodwin  <scott@scottg.net>

	* thread.c, nsopenss.c:
	Merged thread.c into nsopenssl.c.
	
2002-11-23  Scott Goodwin  <scott@scottg.net>

	* all: Cleaned up the directory; moved some files to the test
	directory.
	
	* config.h, tclcmds.h, thread.h: Merged into nsopenssl.h

	* config.c, nsopenssl.h: Merged config.c into init.c

2002-11-21  Scott Goodwin  <scott@scottg.net>

	* tclcmds.c: ns_sockdup, ns_sockioctl have gone away in AOLserver
	4.x. Changed them to dup and ioctl for both 3.x and 4.x compiles.

	* Makefile: Add a definition for $(CP). AOLserver 4.x uses the
	install program instead of CP like AOLserver 3.x. Need to update
	nsopenssl to compile using the appropriate method for 3.x and 4.x.

	* nsopenssl.h: Moved Ns_OpenSSLConn's 'struct NsOpenSSLDriver
	sdPtr' so that it is used for both 3.x and 4.x
